update index + episodes page

--- a/_pages/episodes.html
+++ b/_pages/episodes.html
@@ -10,6 +10,7 @@ header:
 excerpt: "<br> in reverse chronological order <br> you can search for a specific episode <br> in the top right corner"
 ---
 
+<iframe src="https://open.spotify.com/embed/show/3XjoipCU3QzeIaQAAQpBdW" width="80%" height="232" frameBorder="0" allowtransparency='true' allow="encrypted-media"></iframe>
 
 <h3 class="archive__subtitle">Episode List</h3>
 <ul class="taxonomy__index">
